# riptheGamePad

./: .gitignore  CLAUDE.md  Cargo.toml
assets/: config.default.toml
crates/rgp-app/: Cargo.toml
crates/rgp-app/src/: main.rs
crates/rgp-app/tests/: integration.rs
crates/rgp-config/: Cargo.toml
crates/rgp-config/src/: compile.rs  lib.rs  modifiers.rs  schema.rs
crates/rgp-config/tests/: scenarios.rs
crates/rgp-core/: Cargo.toml
crates/rgp-core/src/: control_msg.rs  error.rs  event.rs  lib.rs  pad_state.rs  profile.rs  source.rs
crates/rgp-input-ai/: Cargo.toml
crates/rgp-input-ai-server/: Cargo.toml
crates/rgp-input-ai-server/src/: connection.rs  frame.rs  lib.rs
crates/rgp-input-ai/src/: lib.rs  timer.rs
crates/rgp-input-physical/: Cargo.toml
crates/rgp-input-physical/src/: lib.rs  translate.rs
crates/rgp-router/: Cargo.toml
crates/rgp-router/src/: apply.rs  lib.rs
crates/rgp-router/tests/: control.rs
crates/rgp-tray/: Cargo.toml
crates/rgp-tray/src/: hotkeys.rs  lib.rs  menu.rs
crates/rgp-virtual-pad/: Cargo.toml
crates/rgp-virtual-pad/src/: lib.rs  translate.rs
docs/superpowers/plans/: 2026-05-07-riptheGamePad-implementation.md  2026-05-08-phase2-mixer-modifiers.md
docs/superpowers/specs/: 2026-05-07-riptheGamePad-design.md  2026-05-08-phase2-design.md
scripts/: rgp.psm1  ws-smoke.py
