[workspace]
resolver = "2"
members = [
    "crates/rgp-core",
    "crates/rgp-config",
    "crates/rgp-input-physical",
    "crates/rgp-input-ai",
    "crates/rgp-input-ai-server",
    "crates/rgp-router",
    "crates/rgp-virtual-pad",
    "crates/rgp-tray",
    "crates/rgp-app",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Walter Pollard Jr. <walter.pollard.jr@gmail.com>"]

[workspace.dependencies]
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gilrs = "0.10"
vigem-client = "0.1"
tokio = { version = "1", features = ["rt", "net", "macros", "time", "sync", "io-util"] }
tokio-tungstenite = "0.21"
tray-icon = "0.14"
global-hotkey = "0.5"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
