[package]
name = "rgp-input-physical"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rgp-core = { path = "../rgp-core" }
gilrs = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
