[package]
name = "rgp-tray"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rgp-core = { path = "../rgp-core" }
rgp-config = { path = "../rgp-config" }
crossbeam-channel = { workspace = true }
tray-icon = { workspace = true }
global-hotkey = { workspace = true }
tracing = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
